# ComfyUI-AutoVideoMasking

./: .env.example  README.md  VLM_BRIDGE_README.md  __init__.py  migrate_workflows.py  pyproject.toml
nodes/: __init__.py  prompts.py  samhera_utils.py  vlm_sam3_bridge.py
web/js/: crop_label.js
workflow/: AVM_LayerSelectPreview.json  AVM_Phase1_Preview.json  SAM3_Gemini_AutoMaskingForVideo.json
