[project]
name = "AutoVideoMasking"
version = "1.0.0"
description = "VLM-powered auto prompting for SAM3 in ComfyUI"
authors = [{ name = "ZeroSpace Studios" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "google-genai>=1.0.0",
    "Pillow",
    "numpy",
]

[project.urls]
Homepage = "https://github.com/ZeroSpaceStudios/AutoVideoMasking_SAM_GEMINI"

[tool.comfy]
PublisherId = "ZeroSpaceStudios"
DisplayName = "AutoVideoMasking"
Icon = ""
